--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "@angular/forms": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/pwa": "^0.900.2",
     "@angular/router": "~8.2.14",
+    "@angular/service-worker": "~8.2.14",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0-alpha.0",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
     "@tinymce/tinymce-angular": "^3.3.1",
     "angular2-chartjs": "^0.5.1",
     "bootstrap": "^4.0.0",
     "jquery": "^3.4.1",
+    "ngx-dropzone-wrapper": "^9.0.0",
     "ngx-webstorage": "^4.0.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
